<resources>
    <string name="app_name">ScopeGoWhere</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_equipment">Equipment</string>
    <string name="title_help">Help</string>
    <string name="title_qr_scanner">Scan Endoscope</string>
    <string name="title_create_endoscope">Create New Endoscope</string>
    <string name="title_edit_endoscope">Edit Endoscope</string>
    <string name="login_greetings">Hello again, you\'ve been missed!</string>
    <string name="incorrect_login">Incorrect login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or_with">or With</string>
    <string name="staff_card">Staff Card</string>
    <string name="login_manual">Login Manually</string>
    <string name="login_pass_scanned">Staff Pass Scanned!</string>
    <string name="login_nfc_prompt">Please present your staff pass!</string>
    <string name="login_nfc_invalid">Invalid staff pass!</string>
    <string name="login_nfc_disabled">NFC is not enabled/unavailable.</string>
    <string name="access_denied">Permission denied</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="scanner_close">Scanner Closed</string>
    <string name="scanner_invalid">Invalid QR Code</string>
    <string name="home_staff_id">Staff ID: %1$s</string>
    <string name="home_dept">Dept: %1$s</string>
    <string name="pending_sample_today_n_endoscopes">Pending Sample Today\n(Endoscopes)</string>
    <string name="total_endoscopes">Total Endoscopes</string>
    <string name="in_circulation">In circulation</string>
    <string name="washing">Washing</string>
    <string name="sampling">Sampling</string>
    <string name="menu_notification">Spawn Notification</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_home">Home</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_equipment">Equipment</string>
    <string name="nav_help">Help</string>
    <string name="default_channel_name">default_channel_name</string>
    <string name="default_channel_description">default_channel_description</string>
    <string name="sample_ready_title">A sampling result is ready!</string>
    <string name="sample_ready_description">Scope:</string>
    <string name="main_activity_intent_fragment">fragmentSpec</string>
    <string name="schedule_layout_type_switch_left">Weekly View</string>
    <string name="schedule_layout_type_switch_right">Monthly View</string>
    <string name="schedule_monday">MON</string>
    <string name="schedule_tuesday">TUE</string>
    <string name="schedule_wednesday">WED</string>
    <string name="schedule_thursday">THU</string>
    <string name="schedule_friday">FRI</string>
    <string name="schedule_saturday">SAT</string>
    <string name="schedule_sunday">SUN</string>
    <string name="servicing_icon">•</string>
    <string name="getting_equipments">Getting equipments</string>
    <string name="error_no_scopes">No Scopes Found!</string>
    <string name="search_hint">Search by endoscope name…</string>
    <string name="filtering_options">Filtering Options</string>
    <string name="clear_filters">Clear</string>
    <string-array name="equipment_status_spinner">
        <item>All</item>
        <item>Circulation</item>
        <item>Sampling</item>
        <item>Washing</item>
    </string-array>
    <string name="add_scope">Add New Scope</string>
    <string name="edit_scope">Edit Scope</string>
    <string name="add_edit_scope_serial">Scope Serial Number</string>
    <string name="add_edit_scope_brand">Scope Brand</string>
    <string name="add_edit_scope_model">Scope Model</string>
    <string name="add_edit_scope_type">Scope Type</string>
    <string name="add_edit_scope_next_sample">Next Sample Date</string>
    <string name="add_scope_submit_button">Add Scope</string>
    <string name="edit_scope_submit_button">Update</string>
    <string name="delete_scope_submit_button">Delete</string>
    <string name="scope_choose_sample_date">Choose upcoming Sample Date</string>
    <string name="scope_add_confirm">Add new endoscope?</string>
    <string name="scope_add_success">Endoscope successfully added!</string>
    <string name="scope_update_confirm">Update endoscope?</string>
    <string name="scope_update_success">Endoscope successfully updated!</string>
    <string name="scope_delete_confirm">Delete endoscope?</string>
    <string name="scope_delete_success">Endoscope successfully deleted!</string>
    <string name="missing_inputs">Please fill in all the fields!</string>
    <string name="endoscope_name">%1$s %2$s</string>
    <string name="endoscope_serial">Serial: %1$s</string>
    <string name="edit">Edit</string>
    <string name="view_logs">View Logs</string>
    <string name="wash">Wash</string>
    <string name="sample">Sample</string>
    <string name="next_sample_date">Next Sample Date</string>
    <string name="equipment_status">Equipment Status</string>
    <string name="return_to_circulation">Return to circulation</string>
    <string name="dialog_return_to_circulation">Return endoscope to Circulation?</string>
    <string name="value">VALUE</string>
    <string name="model">MODEL</string>
    <string name="type">TYPE</string>
    <string name="serial">SERIAL</string>
    <string name="error_failed_load_endoscope_details">Failed to load endoscope details.</string>
    <string name="endoscope_log_sample_history">Sample History</string>
    <string name="wash_data">Wash Data</string>
    <string name="aer_model_prefix">AER Model :</string>
    <string name="aer_serial_prefix">AER Serial :</string>
    <string name="detergent_used_prefix">Detergent Used :</string>
    <string name="detergent_lot_no_prefix">Detergent Lot No :</string>
    <string name="filter_change_date_prefix">Filter Change Date :</string>
    <string name="disinfectant_used_prefix">Disinfectant Used :</string>
    <string name="disinfectant_lot_no_prefix">Disinfectant Lot No :</string>
    <string name="disinfectant_changed_date_prefix">Disinfectant Changed Date :</string>
    <string name="scope_dryer_prefix">Scope Dryer :</string>
    <string name="done_by_prefix">Done By :</string>
    <string name="remarks_prefix">Remarks :</string>
    <string name="dryer_level_prefix">Dryer Level :</string>
    <string name="wash_date_prefix">Wash Date :</string>
    <string name="result_data">Result Data</string>
    <string name="fluid_result_prefix2">Fluid Result :</string>
    <string name="fluid_action_prefix">Fluid Action :</string>
    <string name="fluid_comment_prefix">Fluid Comment :</string>
    <string name="quarantine_required_prefix2">Quarantine Required :</string>
    <string name="recorded_by_prefix">Recorded By :</string>
    <string name="swab_result_prefix2">Swab Result :</string>
    <string name="swab_action_prefix">Swab Action :</string>
    <string name="swab_culture_comment_prefix">Swab Culture Comment :</string>
    <string name="repeat_date_ms_prefix">Repeat Date MS :</string>
    <string name="borescope_prefix2">Borescope :</string>
    <string name="water_atp_rlu_prefix">Water ATP RLU :</string>
    <string name="swab_atp_rlu_prefix">Swab ATP RLU :</string>
    <string name="result_date_prefix">Result Date :</string>
    <string name="swab_date_prefix">Swab Date :</string>
    <string name="select_entry_method">Select Entry Method</string>
    <string name="manual_entry">Enter Manually</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="scan_again">Scan Again</string>
    <string name="process_result">Process Result</string>
    <string name="record_wash">Record Wash</string>
    <string name="record_sample">Record Sample</string>
    <string name="wash_title_printf">Wash Equipment (%1$s/5)</string>
    <string-array name="wash_menu_opts">
        <item>1. AER</item>
        <item>2. Detergent</item>
        <item>3. Disinfectant</item>
        <item>4. Drying</item>
        <item>5. Summary</item>
    </string-array>
    <string name="washer">Washer</string>
    <string name="aer_model">AER Model</string>
    <string name="aer_serial_no">AER Serial No.</string>
    <string name="detergent">Detergent</string>
    <string name="detergent_used">Detergent Used</string>
    <string name="detergent_lot_no">Detergent Lot No.</string>
    <string name="filter_change_date">Filter Change Date</string>
    <string name="disinfectant">Disinfectant</string>
    <string name="disinfectant_used">Disinfectant Used</string>
    <string name="disinfectant_lot_no">Disinfectant Lot No.</string>
    <string name="disinfectant_changed_date">Disinfectant Changed Date</string>
    <string name="disinfectant_changed_date_popup_title">Select Disinfectant Changed Date</string>
    <string name="drying_cabinet">Drying Cabinet</string>
    <string name="scope_dryer">Scope Dryer</string>
    <string name="dryer_level">Dryer Level</string>
    <string name="remarks">Remarks</string>
    <string name="confirm_wash_prompt">Confirm scope wash details?</string>
    <string name="confirm_wash_success">Scope wash details successfully recorded!</string>
    <string name="sample_title">Sample Equipment</string>
    <string name="sample_title_printf">Sample Equipment (%1$s/5)</string>
    <string-array name="sample_menu_opts">
        <item>Choose Method</item>
        <item>1. Fluid</item>
        <item>2. Swab</item>
        <item>3. Repeat MS</item>
        <item>4. ATP</item>
        <item>5. Summary</item>
    </string-array>
    <string name="fluid_result">Fluid Result</string>
    <string name="fluid_result_prefix">Fluid Result:</string>
    <string name="action">Action</string>
    <string name="comments">Comments</string>
    <string name="swab_result">Swab Result</string>
    <string name="swab_result_prefix">Swab Result:</string>
    <string name="date_of_result">Date of Result</string>
    <string name="culture_comment">Culture Comment</string>
    <string name="repeat_of_ms">Repeat MS</string>
    <string name="repeat_of_ms_popup_title">Select Resample Date</string>
    <string name="quarantine_required">Quarantine Required</string>
    <string name="quarantine_required_prefix">Quarantine Required:</string>
    <string name="borescope">Borescope</string>
    <string name="borescope_prefix">Borescope:</string>
    <string name="atp_results">ATP Results</string>
    <string name="atp_water_rlu">ATP Water RLU</string>
    <string name="atp_swab_rlu">ATP Swab RLU</string>
    <string name="confirm_sample_prompt">Confirm sample details?</string>
    <string name="confirm_sample_success">Scope sample successfully recorded!</string>
    <string-array name="spinner_yes_no">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="spinner_positive_negative">
        <item>Negative</item>
        <item>Positive</item>
    </string-array>
    <string name="app_title">How to Use the App</string>
</resources>