<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/nav_schedule" />

    <item
        android:id="@+id/nav_fab_spacing"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/nav_equipment"
        android:icon="@drawable/baseline_handyman_24"
        android:title="@string/nav_equipment" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/baseline_help_24"
        android:title="@string/nav_help" />
</menu>