<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ui.sample.Sample0ChooseMethodFragment">

    <TextView
        android:id="@+id/methodSelectTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/select_entry_method"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/imageScrollView"
        android:layout_width="388dp"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inputImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="0.3"
            android:text="@string/upload_photo" />

        <Button
            android:id="@+id/manualEntryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/manual_entry" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/processPhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/process_result" />

</LinearLayout>