<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.sample.Sample2SwabResultFragment">

    <TextView
        android:id="@+id/swabResultTextView"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginHorizontal="10sp"
        android:gravity="bottom"
        android:text="@string/swab_result"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/date_of_result">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateOfResultInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/swabResultTextview"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/swab_result_prefix"
            android:textAlignment="gravity"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/swabResultSpinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/action">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/actionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/culture_comment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cultureCommentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorMsgSwab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#FF2525" />

</LinearLayout>